# J3DConv

./: .gitmodules  CMakeLists.txt  vcpkg.json
include/: J3DConv.hpp  J3DUtil.hpp  J3DVertexData.hpp  UConverterEnvelopeData.hpp  UConverterJoint.hpp  UConverterMesh.hpp  UConverterObject.hpp  UConverterShapeData.hpp  UConverterSkeletonData.hpp  UConverterVertexData.hpp  types.hpp
src/: J3DConv.cpp  J3DNameTable.cpp  J3DUtil.cpp  J3DVertexData.cpp  Tester.cpp  UConverterEnvelopeData.cpp  UConverterJoint.cpp  UConverterMesh.cpp  UConverterObject.cpp  UConverterShapeData.cpp  UConverterSkeletonData.cpp  UConverterVertexData.cpp
